[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "NAT traversal utilities."
documentation = "http://maidsafe.net/nat_traversal/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "nat_traversal"
readme = "README.md"
repository = "https://github.com/maidsafe/nat_traversal"
version = "0.0.3"

[dependencies]
cbor = "~0.3.16"
clippy = {version = "~0.0.37", optional = true}
crossbeam = "~0.1.6"
get_if_addrs = "~0.3.0"
igd = "~0.4.0"
ip = "~1.1.0"
libc = "~0.2.6"
log = "~0.3.4"
maidsafe_utilities = "~0.2.1"
net2 = "~0.2.20"
quick-error = "0.2.2"
rand = "~0.3.12"
rustc-serialize = "~0.3.16"
socket_addr = "~0.0.1"
sodiumoxide = "~0.0.9"
time = "~0.1.34"
void = "0.0.5"
w_result = "~0.1.1"
