[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "NAT traversal utilities."
documentation = "http://maidsafe.net/nat_traversal/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "nat_traversal"
readme = "README.md"
repository = "https://github.com/maidsafe/nat_traversal"
version = "0.2.1"

[dependencies]
clippy = {version = "~0.0.44", optional = true}
crossbeam = "~0.2.8"
get_if_addrs = "~0.4.0"
igd = "~0.4.2"
libc = "~0.2.7"
log = "~0.3.5"
maidsafe_utilities = "~0.4.0"
net2 = "~0.2.22"
quick-error = "1.0.0"
rand = "~0.3.14"
rustc-serialize = "~0.3.18"
socket_addr = "~0.1.0"
sodiumoxide = "~0.0.9"
time = "~0.1.34"
void = "1.0.1"
w_result = "~0.1.1"
unwrap = "~1.0.0"

