[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "NAT traversal utilities."
documentation = "http://maidsafe.net/nat_traversal/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "nat_traversal"
readme = "README.md"
repository = "https://github.com/maidsafe/nat_traversal"
version = "0.3.4"

[dependencies]
clippy = {version = "~0.0.66", optional = true}
crossbeam = "~0.2.9"
get_if_addrs = "~0.4.0"
igd = "~0.4.2"
libc = "~0.2.11"
log = "~0.3.6"
maidsafe_utilities = "~0.5.4"
net2 = "~0.2.23"
quick-error = "1.0.0"
rand = "~0.3.14"
rustc-serialize = "~0.3.19"
socket_addr = "~0.1.0"
sodiumoxide = "~0.0.10"
time = "~0.1.35"
void = "1.0.2"
w_result = "~0.1.2"
byteorder = "~0.5.1"

